2007-12-12  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcutbase.ui:
	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/main.cpp:
		Added 4:3 & 16:9 bookmark conversion to GUI & CLI.
		Additional -cut & -automarker CLI switches.

2007-12-08  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcut.cpp:
		Added format option to <expfile>-tag of project files.
		Fixed a chapterlist bug.

	* src/settings.cpp:
		Empty defaults for pipe settings.
				
2007-12-06  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)
  
	* src/settings.cpp:
	* src/settings.h:
	* src/dvbcut.cpp:
	* src/dvbcut.h:
		New recent files format which allows for storing
		multiple input files.

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/main.cpp:
		Input file names can come before CLI switches.
		New -format switch.

2007-12-06  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/settings.cpp:
	* src/settings.h:
		New pipe command settings.

	* src/dvbcut.cpp:
		Improved pipe command.
 
2007-12-06  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcutbase.ui:
		Use zero margin.

2007-11-28  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/lavfmuxer.cpp:
		Compatibility patch for libavformat >= 52.0.0
		(contributed by Alexis Ballier).

2007-11-28  Wolfram Gloger  <video06@malloc.de>  (mr)

	* src/dvbcut.cpp:
	* src/mpegmuxer.cpp:
		Allow output to a pipe.

	* src/port.h:
		Include <sys/wait.h> on Unix/Linux.
 
2007-11-26  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/dvbcutbase.ui:
	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/settings.cpp:
	* src/settings.h:
		Configurable snapshot parameters and chapter snapshots.

2007-11-24  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)

	* src/tsfile.cpp:
	* src/tsfile.h:
		Import bookmarks from new Topfield TF7700HDPVR.

	* src/mpgfile.cpp:
	* src/mpgfile.h:
		readfile() to read (small) files to memory.

	* src/buffer.cpp:
	* src/buffer.h:
		Store filename in files structure.
		