@@ -1,3 +1,13 @@
+2008-01-06  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)
+
+	* src/dvbcutbase.ui
+	* src/dvbcut.cpp
+	* src/dvbcut.h
+	* src/settings.cpp
+	* src/settings.h
+		Automated setting of equidistant chapter markers.
+		Fixed bug concerning positioning via output frames.
+
 2007-12-12  Ralph Glasstetter  <ralph.glasstetter@web.de>  (mr)
 
 	* src/dvbcutbase.ui:
